--- a/SnacksApp/SnacksApp.csproj
+++ b/SnacksApp/SnacksApp.csproj
@@ -81,6 +81,7 @@
 	  <None Remove="Resources\Images\profilesettings.png" />
 	  <None Remove="Resources\Images\rightarrow.png" />
 	  <None Remove="Resources\Images\uploadphoto.png" />
+	  <None Remove="Resources\Images\user1.png" />
 	  <None Remove="Resources\Splash\lanche.svg" />
 	</ItemGroup>
 
